# System-Software-Proj

SystemSoftProj/: CMakeLists.txt  PM0_SCANNER_README.docx  PM0_VM_README.docx  mcode.txt  scanner.c  scanner.h  stacktrace.txt  symbolTable.c  symbolTable.h  vm.c  vm.h
SystemSoftProj/TestProgramResults/Error 1 Test Case Results/: cleaninput.txt
SystemSoftProj/TestProgramResults/Error 2 Test Case Results/: input.txt
SystemSoftProj/TestProgramResults/Error 3 Test Case Results/: cleaninput.txt
SystemSoftProj/TestProgramResults/Error 4 Test Case Results/: cleaninput.txt  input.txt  lexemetable.txt
SystemSoftProj/TestProgramResults/Symbol Test Case Results/: cleaninput.txt  input.txt  lexemelist.txt  lexemetable.txt
SystemSoftProj/TestProgramResults/Tricky Test Case Results/: cleaninput.txt  input.txt  lexemelist.txt  lexemetable.txt
